src/snapshots/skate__ast_tests__exprs-10.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: rand
        span:
          start: 3
          end: 7
          file_id: 100
      args:
        node: []
        span:
          start: 7
          end: 9
          file_id: 100
      ret: ~
      body:
        node:
          - - Expr:
                node:
                  Block:
                    node:
                      - - Expr:
                            node:
                              Literal:
                                node:
                                  Integer: 2
                                span:
                                  start: 12
                                  end: 13
                                  file_id: 100
                            span:
                              start: 12
                              end: 13
                              file_id: 100
                      - ReturnExpr
                    span:
                      start: 11
                      end: 14
                      file_id: 100
                span:
                  start: 11
                  end: 14
                  file_id: 100
          - Discard
        span:
          start: 9
          end: 17
          file_id: 100
    span:
      start: 0
      end: 17
      file_id: 100

