src/snapshots/skate__ast_tests__exprs-2.snap
---
source: src/ast_tests.rs
expression: f

---
BinOp:
  - Literal:
      node:
        Integer: 1
      span:
        - 0
        - 1
  - node: Plus
    span:
      - 2
      - 3
  - Block:
      node:
        - Expr:
            If:
              - Literal:
                  node:
                    Integer: 1
                  span:
                    - 8
                    - 9
              - node:
                  - Expr:
                      Literal:
                        node:
                          Integer: 2
                        span:
                          - 11
                          - 12
                span:
                  - 10
                  - 13
              - node:
                  - Expr:
                      Literal:
                        node:
                          Integer: 3
                        span:
                          - 20
                          - 21
                span:
                  - 19
                  - 22
      span:
        - 4
        - 23

