src/snapshots/skate__ast_tests__exprs-3.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: rand
        span:
          start: 3
          end: 7
          file_id: 100
      args:
        node: []
        span:
          start: 7
          end: 9
          file_id: 100
      ret: ~
      body:
        node:
          - Expr:
              node:
                BinOp:
                  - node:
                      Literal:
                        node:
                          Integer: 2
                        span:
                          start: 11
                          end: 12
                          file_id: 100
                    span:
                      start: 11
                      end: 12
                      file_id: 100
                  - node: Plus
                    span:
                      start: 12
                      end: 13
                      file_id: 100
                  - node:
                      BinOp:
                        - node:
                            Literal:
                              node:
                                Integer: 4
                              span:
                                start: 13
                                end: 14
                                file_id: 100
                          span:
                            start: 13
                            end: 14
                            file_id: 100
                        - node: Times
                          span:
                            start: 14
                            end: 15
                            file_id: 100
                        - node:
                            Literal:
                              node:
                                Integer: 3
                              span:
                                start: 15
                                end: 16
                                file_id: 100
                          span:
                            start: 15
                            end: 16
                            file_id: 100
                    span:
                      start: 13
                      end: 16
                      file_id: 100
              span:
                start: 11
                end: 16
                file_id: 100
        span:
          start: 9
          end: 19
          file_id: 100
    span:
      start: 0
      end: 19
      file_id: 100

