src/snapshots/skate__ast_tests__exprs-4.snap
---
source: src/ast_tests.rs
expression: f

---
node:
  BinOp:
    - node:
        BinOp:
          - node:
              Literal:
                node:
                  Integer: 4
                span:
                  - 0
                  - 1
                  - 100
            span:
              - 0
              - 1
              - 100
          - node: Times
            span:
              - 1
              - 2
              - 100
          - node:
              Literal:
                node:
                  Integer: 2
                span:
                  - 2
                  - 3
                  - 100
            span:
              - 2
              - 3
              - 100
      span:
        - 0
        - 3
        - 100
    - node: Plus
      span:
        - 3
        - 4
        - 100
    - node:
        Literal:
          node:
            Integer: 3
          span:
            - 4
            - 5
            - 100
      span:
        - 4
        - 5
        - 100
span:
  - 0
  - 5
  - 100

