src/snapshots/skate__ast_tests__exprs-5.snap
---
source: src/ast_tests.rs
expression: f

---
BinOp:
  - BinOp:
      - Literal:
          node:
            Integer: 1
          span:
            - 0
            - 1
      - node: Equals
        span:
          - 1
          - 3
      - Literal:
          node:
            Integer: 2
          span:
            - 3
            - 4
  - node: Equals
    span:
      - 4
      - 6
  - BinOp:
      - Literal:
          node:
            Integer: 3
          span:
            - 6
            - 7
      - node: Plus
        span:
          - 7
          - 8
      - Literal:
          node:
            Integer: 3
          span:
            - 8
            - 9

