src/snapshots/skate__ast_tests__exprs-6.snap
---
source: src/ast_tests.rs
expression: f

---
node:
  Literal:
    node:
      String: ""
    span:
      start: 0
      end: 2
      file_id: 100
span:
  start: 0
  end: 2
  file_id: 100

