src/snapshots/skate__ast_tests__exprs-7.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: rand
        span:
          start: 3
          end: 7
          file_id: 100
      args:
        node: []
        span:
          start: 7
          end: 9
          file_id: 100
      ret: ~
      body:
        node:
          - - Expr:
                node:
                  Literal:
                    node:
                      String: "ab\\\""
                    span:
                      start: 11
                      end: 17
                      file_id: 100
                span:
                  start: 11
                  end: 17
                  file_id: 100
          - Discard
        span:
          start: 9
          end: 20
          file_id: 100
    span:
      start: 0
      end: 20
      file_id: 100

