src/snapshots/skate__ast_tests__exprs-8.snap
---
source: src/ast_tests.rs
expression: f

---
node:
  BinOp:
    - node:
        BinOp:
          - node:
              BinOp:
                - node:
                    UnaryOp:
                      - node: Minus
                        span:
                          - 1
                          - 2
                          - 100
                      - node:
                          Literal:
                            node:
                              Integer: 1
                            span:
                              - 2
                              - 3
                              - 100
                        span:
                          - 2
                          - 3
                          - 100
                  span:
                    - 1
                    - 3
                    - 100
                - node: Plus
                  span:
                    - 4
                    - 5
                    - 100
                - node:
                    Literal:
                      node:
                        Integer: 2
                      span:
                        - 6
                        - 7
                        - 100
                  span:
                    - 6
                    - 7
                    - 100
            span:
              - 0
              - 8
              - 100
          - node: Times
            span:
              - 9
              - 10
              - 100
          - node:
              Literal:
                node:
                  Integer: 3
                span:
                  - 11
                  - 12
                  - 100
            span:
              - 11
              - 12
              - 100
      span:
        - 0
        - 12
        - 100
    - node: Minus
      span:
        - 13
        - 14
        - 100
    - node:
        UnaryOp:
          - node: Minus
            span:
              - 15
              - 16
              - 100
          - node:
              Literal:
                node:
                  Integer: 4
                span:
                  - 16
                  - 17
                  - 100
            span:
              - 16
              - 17
              - 100
      span:
        - 15
        - 17
        - 100
span:
  - 0
  - 17
  - 100

