src/snapshots/skate__ast_tests__exprs-9.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: rand
        span:
          start: 3
          end: 7
          file_id: 100
      args:
        node: []
        span:
          start: 7
          end: 9
          file_id: 100
      ret: ~
      body:
        node:
          - Expr:
              node:
                BinOp:
                  - node:
                      BinOp:
                        - node:
                            Literal:
                              node:
                                Integer: 24
                              span:
                                start: 11
                                end: 13
                                file_id: 100
                          span:
                            start: 11
                            end: 13
                            file_id: 100
                        - node: Plus
                          span:
                            start: 13
                            end: 14
                            file_id: 100
                        - node:
                            BinOp:
                              - node:
                                  BinOp:
                                    - node:
                                        Literal:
                                          node:
                                            Integer: 24
                                          span:
                                            start: 14
                                            end: 16
                                            file_id: 100
                                      span:
                                        start: 14
                                        end: 16
                                        file_id: 100
                                    - node: Times
                                      span:
                                        start: 16
                                        end: 17
                                        file_id: 100
                                    - node:
                                        Literal:
                                          node:
                                            Integer: 32
                                          span:
                                            start: 17
                                            end: 19
                                            file_id: 100
                                      span:
                                        start: 17
                                        end: 19
                                        file_id: 100
                                span:
                                  start: 14
                                  end: 19
                                  file_id: 100
                              - node: Devide
                                span:
                                  start: 19
                                  end: 20
                                  file_id: 100
                              - node:
                                  UnaryOp:
                                    - node: Minus
                                      span:
                                        start: 20
                                        end: 21
                                        file_id: 100
                                    - node:
                                        Literal:
                                          node:
                                            Integer: 12
                                          span:
                                            start: 21
                                            end: 23
                                            file_id: 100
                                      span:
                                        start: 21
                                        end: 23
                                        file_id: 100
                                span:
                                  start: 20
                                  end: 23
                                  file_id: 100
                          span:
                            start: 14
                            end: 23
                            file_id: 100
                    span:
                      start: 11
                      end: 23
                      file_id: 100
                  - node: Plus
                    span:
                      start: 23
                      end: 24
                      file_id: 100
                  - node:
                      Literal:
                        node:
                          Integer: 2
                        span:
                          start: 24
                          end: 25
                          file_id: 100
                    span:
                      start: 24
                      end: 25
                      file_id: 100
              span:
                start: 11
                end: 25
                file_id: 100
        span:
          start: 9
          end: 28
          file_id: 100
    span:
      start: 0
      end: 28
      file_id: 100

