src/snapshots/skate__ast_tests__exprs.snap
---
source: src/ast_tests.rs
expression: f

---
node:
  Literal:
    node:
      Integer: 1
    span:
      start: 0
      end: 1
      file_id: 100
span:
  start: 0
  end: 1
  file_id: 100

